Fix contact form overlapping footer on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,8 +200,7 @@ footer {
 /* Contact Page */
 
 #contact-sect{
-    padding-top: 7em;
-    height: 80%;
+    padding: 7em 0;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
